objects/jiffle__Briefing_Invites__c.object
<CustomObject>
    <fields>
        <fullName>jiffle__Attendee_Email__c</fullName>
        <description>Attendee Email</description>
        <formula>jiffle__Attendee__r.jiffle__Attendee_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Attendee_First_Name__c</fullName>
        <description>Attendee First Name</description>
        <formula>jiffle__Attendee__r.jiffle__Attendee_First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Attendee_Last_Name__c</fullName>
        <description>Attendee Last Name</description>
        <formula>jiffle__Attendee__r.jiffle__Attendee_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendee Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Attendee_Name__c</fullName>
        <description>Attendee Name</description>
        <formula>HYPERLINK(&quot;/&quot; + jiffle__Attendee__r.Id , jiffle__Attendee__r.jiffle__Attendee_First_Name__c +&quot; &quot;+jiffle__Attendee__r.jiffle__Attendee_Last_Name__c ,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Attendee Name</inlineHelpText>
        <label>Attendee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Attendee_Status__c</fullName>
        <label>Attendee Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attendee</label>
        <referenceTo>jiffle__Attendee__c</referenceTo>
        <relationshipLabel>Briefing Invites</relationshipLabel>
        <relationshipName>Briefing_Invites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Briefing_Date__c</fullName>
        <description>Briefing Start Date</description>
        <formula>jiffle__Briefing__r.jiffle__Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Briefing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>jiffle__Briefing__c</fullName>
        <label>Briefing</label>
        <referenceTo>jiffle__Briefing__c</referenceTo>
        <relationshipLabel>Briefing Invites</relationshipLabel>
        <relationshipName>Briefing_Invites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>jiffle__Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>jiffle__Company__c</fullName>
        <description>Company Name</description>
        <formula>jiffle__Attendee__r.jiffle__Company__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Contact_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jiffle__Contact_Type__c</fullName>
        <description>Attendee type - internal or external</description>
        <label>Contact Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>jiffle__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Briefing Invites</relationshipLabel>
        <relationshipName>Briefing_Invites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>jiffle__Is_Meeting_Requestor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is attendee Meeting requestor?</description>
        <label>Is Meeting Requestor?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>jiffle__Unique_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Briefing Invite</label>
    <nameField>
        <displayFormat>BI-{0000}</displayFormat>
        <label>Briefing Invite ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Briefing Invites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>